# what-is-life

./: .gitignore  Dockerfile.android  INSTALL_AppImage.txt  INSTALL_DEB.txt  INSTALL_RPM.txt  ITEMS_DATABASE.md  LICENSE  README.md  RELEASE_NOTES_v0.1.1.md  capacitor.config.ts  package-lock.json  package.json  release-notes-v0.1.0-beta.txt  test  wget-log
.github/workflows/: build-release.yml
android/app/: build.gradle
docs/: ANDROID_SETUP.md  BUILD_README.md  GITHUB_RELEASE_INSTRUCTIONS.md  ICON_SPECIFICATIONS.md  SYSTEM_REQUIREMENTS.md
docs/development/: DEVELOPMENT_GUIDE.md
docs/gameplay/: COMPLETE_GAME_GUIDE.md  GAME_GUIDE.md
docs/release-notes/: v0.1.1-beta.md  v0.1.1.md
scripts/: build-android.sh  build-windows.bat  build-windows.sh  build.sh  generate-icons.sh  windows-bootstrapper.bat
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
web/: .gitignore  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  test-items.js  tsconfig.json  vite.config.ts
web/android/: capacitor.settings.gradle
web/android/app/: build.gradle  capacitor.build.gradle
web/public/: site.webmanifest
web/src/: App.tsx  App.tsx.backup  index.css  main.tsx
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src/activities/: Crime.tsx  Dig.tsx  Explore.tsx  Fish.tsx  Garden.tsx  Hunt.tsx  Post.tsx  Search.tsx  Stream.tsx  Work.tsx
web/src/components/: ActivityProgress.tsx  CharacterCreation.tsx  DataManagementModal.tsx  ErrorBoundary.tsx  ErrorLogViewer.tsx  FirstTimeSetup.tsx  Game.tsx  LoadingScreen.tsx  (+5 more)
(+95 files in other folders)
