[package]
name = "WhatIsLife"
version = "0.1.1"
description = "Life is full of adventures..."
authors = ["CodeNameOperative"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri = { version = "1.8.1", features = [ "fs-write-file", "fs-rename-file", "fs-create-dir", "fs-copy-file", "fs-remove-dir", "fs-exists", "fs-read-dir", "fs-read-file", "fs-remove-file", "updater"] }
tauri-plugin-updater = "1.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "sync"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
once_cell = "1.19"
local-ip-address = "0.5"
uuid = { version = "1", features = ["v4"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
